--- a/Examples/AppParameterBasicUsage/mainwindow.ui
+++ b/Examples/AppParameterBasicUsage/mainwindow.ui
@@ -308,6 +308,33 @@ Summer 25.6</string>
       </property>
      </spacer>
     </item>
+    <item>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QPushButton" name="cmdQDebug">
+        <property name="styleSheet">
+         <string notr="true">color: blue;font-weight: bold;</string>
+        </property>
+        <property name="text">
+         <string>Test QDebug using &lt;&lt; for Parameter</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Orientation::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
