--- a/Examples/AppParameterListBasicUsage/mainwindow.ui
+++ b/Examples/AppParameterListBasicUsage/mainwindow.ui
@@ -14,19 +14,26 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="cmdQDebug">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>50</y>
-      <width>481</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Test QDebug &lt;&lt; for ParameterList</string>
-    </property>
-   </widget>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="cmdQDebug">
+        <property name="text">
+         <string>Test QDebug &lt;&lt; for ParameterList</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="cmdDefault">
+        <property name="text">
+         <string>Apply Default</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
