Implemention almost done
AppParameterBasicUsage completed
Parameter:
- [x] Add rangeIsValid and his test
- [x] Add the isChanged flag
- [x] rename isChanged to isValueChanged
- [x] handle the case where the value is back to default
      without triggering a preset or loading from json

ParameterList:
- [x] Test the update values from JSON capability

--- a/Examples/AppParameterListBasicUsage/mainwindow.ui
+++ b/Examples/AppParameterListBasicUsage/mainwindow.ui
@@ -25,9 +25,16 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="cmdDefault">
+       <widget class="QPushButton" name="cmdDefault01">
         <property name="text">
-         <string>Apply Default</string>
+         <string>Apply Default 1</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="cmdDefault02">
+        <property name="text">
+         <string>Apply Default 2</string>
         </property>
        </widget>
       </item>
