--- a/Examples/AppParameterBasicUsage/mainwindow.ui
+++ b/Examples/AppParameterBasicUsage/mainwindow.ui
@@ -214,6 +214,19 @@ Summer 25.6</string>
           </property>
          </widget>
         </item>
+        <item row="9" column="0">
+         <widget class="QPushButton" name="cmdUpdatePreset">
+          <property name="styleSheet">
+           <string notr="true">color: blue;font-weight: bold;</string>
+          </property>
+          <property name="text">
+           <string>Preset Update</string>
+          </property>
+         </widget>
+        </item>
+        <item row="9" column="1">
+         <widget class="QComboBox" name="cboPresets"/>
+        </item>
        </layout>
       </item>
       <item>
@@ -310,17 +323,7 @@ Summer 25.6</string>
     </item>
     <item>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QPushButton" name="cmdQDebug">
-        <property name="styleSheet">
-         <string notr="true">color: blue;font-weight: bold;</string>
-        </property>
-        <property name="text">
-         <string>Test QDebug using &lt;&lt; for Parameter</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
+      <item row="0" column="2">
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Orientation::Horizontal</enum>
@@ -332,6 +335,16 @@ Summer 25.6</string>
          </size>
         </property>
        </spacer>
+      </item>
+      <item row="0" column="0">
+       <widget class="QPushButton" name="cmdQDebug">
+        <property name="styleSheet">
+         <string notr="true">color: blue;font-weight: bold;</string>
+        </property>
+        <property name="text">
+         <string>Test QDebug using &lt;&lt; for Parameter</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
