--- a/Examples/AppSettingsBasicUsage/mainwindow.ui
+++ b/Examples/AppSettingsBasicUsage/mainwindow.ui
@@ -11,14 +11,17 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>AppSettingsBasicUsage</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QLabel" name="label">
+      <property name="styleSheet">
+       <string notr="true">color: blue;  font-weight: bold;</string>
+      </property>
       <property name="text">
-       <string>Basic Usage Example for QtNoidApp</string>
+       <string>Basic Usage Example for QtNoidApp Settings Class</string>
       </property>
      </widget>
     </item>
