--- a/Examples/AppParameterListBasicUsage/mainwindow.ui
+++ b/Examples/AppParameterListBasicUsage/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>AppParameterListBasicUsage</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
